[package]
name = "festive"
version = "0.1.1"
license = "MIT/Apache-2.0"
repository = "https://github.com/estk/festive"
authors = ["Evan Simmons <esims89@gmail.com>"]
description = "Run your tests in isolation"
edition = "2018"

[lib]
proc-macro = true

# [[test]]
# name = "rf_pid"
# path = "tests/rf_pid.rs"
# features = ["rusty-fork"]

[[test]]
name = "fest_pid"
path = "tests/fest_pid.rs"

[dependencies]
syn = {version = "1.0.17", features = ["full", "extra-traits"]}
proc-macro2 = "1.0.10"
quote = "1.0.3"
rusty-fork = {version = "0.2.2", optional = true}
festivities = {path = "festivities", version = "*"}