[package]
name = "festive"
version = "0.2.1"
authors = ["Evan Simmons <esims89@gmail.com>", "Jason Lingle"]
license = "MIT/Apache-2.0"
readme = "readme.md"
repository = "https://github.com/estk/festive"
documentation = "https://docs.rs/festive"
description = "Run your tests in isolation"
edition = "2018"

[workspace]
members = ["macros"]

[dependencies]
fnv = "1.0"
process_control = "1.0.0"
thiserror = "1.0.15"
festive-macros = { path = "./macros", version = "0.2.1" }
